Implement basic and bearer authentication to axum

--- a/modules/openapi-generator/src/main/resources/rust-axum/Cargo.mustache
+++ b/modules/openapi-generator/src/main/resources/rust-axum/Cargo.mustache
@@ -41,7 +41,7 @@ conversion = [
 [dependencies]
 async-trait = "0.1"
 axum = { version = "0.7" }
-axum-extra = { version = "0.9", features = ["cookie", "multipart"] }
+axum-extra = { version = "0.9", features = ["cookie", "multipart", "typed-header"] }
 base64 = "0.22"
 bytes = "1"
 chrono = { version = "0.4", features = ["serde"] }
