Fix headers and implement unexpected error reporting

--- a/modules/openapi-generator/src/main/resources/rust-axum/apis.mustache
+++ b/modules/openapi-generator/src/main/resources/rust-axum/apis.mustache
@@ -41,7 +41,7 @@ pub trait {{classnamePascalCase}} {
   {{#vendorExtensions}}
     /// {{{operationId}}} - {{{httpMethod}}} {{{basePathWithoutHost}}}{{{path}}}
     async fn {{{x-operation-id}}}(
-    &self, // TEST
+    &self,
     method: Method,
     host: Host,
     cookies: CookieJar,
